berhasil apply primeng style on table groupAchieve

--- a/src/app/group-achievement/group-achievement.component.html
+++ b/src/app/group-achievement/group-achievement.component.html
@@ -1,19 +1,34 @@
 <div *ngIf="isLoading">Loading...</div>
 <div *ngIf="error">{{ error }}</div>
-<table *ngIf="!isLoading && !error" border="1">
-  <thead>
+
+<p-table
+  *ngIf="!isLoading && !error"
+  [value]="groupAchievements"
+  [paginator]="true"
+  [rows]="10"
+  [responsiveLayout]="'scroll'"
+>
+  <ng-template pTemplate="header">
     <tr>
       <th>ID</th>
       <th>Group Name</th>
       <th>Percentage</th>
-      <!-- Tambahkan kolom lain sesuai kebutuhan -->
+      <th>Action</th>
     </tr>
-  </thead>
-  <tbody>
+  </ng-template>
+  <ng-template pTemplate="body" let-achievement>
     <tr *ngFor="let achievement of groupAchievements">
       <td>{{ achievement.id }}</td>
       <td>{{ achievement.group_achievement_name }}</td>
       <td>{{ achievement.percentage }}</td>
     </tr>
-  </tbody>
-</table>
+  </ng-template>
+</p-table>
+
+<!-- Button to open the create modal -->
+<div class="card flex justify-content-center">
+  <p-button
+    label="+ Create new group achievement"
+    icon="pi pi-check"
+  ></p-button>
+</div>
