--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <router-outlet />
 
 <div>
-  <app-group-achievement></app-group-achievement>
+  <!-- <app-group-achievement></app-group-achievement> -->
+  <!-- <app-user-list></app-user-list> -->
+   <app-login></app-login>
 </div>
