--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <router-outlet />
 
-<div>
+<!-- <div>
   <app-group-achievement></app-group-achievement>
-</div>
+</div> -->
 
 <div><app-achievement></app-achievement></div>
