--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<router-outlet />
-
-<div>
-  <app-group-achievement></app-group-achievement>
-</div>
-
-<div><app-achievement></app-achievement></div>
+<router-outlet></router-outlet>
