--- a/src/app/achievement/achievement.component.html
+++ b/src/app/achievement/achievement.component.html
@@ -3,8 +3,17 @@
 
 <h2>Achievements</h2>
 
+<!-- Button to open the create modal -->
+<div class="card flex justify-content-center">
+  <p-button
+    label="+ Create new achievement"
+    icon="pi pi-check"
+    (click)="showCreateDialog()"
+  ></p-button>
+</div>
+
 <!-- Form to Create a New Achievement -->
-<div class="card">
+<!-- <div class="card">
   <h3>Create New Achievement</h3>
   <div class="p-field">
     <label for="achievementName">Achievement Name</label>
@@ -20,19 +29,66 @@
     <label for="groupAchievement">Group Achievement</label>
     <p-dropdown
       [options]="groupAchievementOptions"
-      [(ngModel)]="newAchievement.group_achievement_name"
+      [(ngModel)]="newAchievement.group_achievement_id"
       placeholder="Select Group Achievement"
     >
     </p-dropdown>
-  </div>
+  </div> -->
 
-  <button
+<!-- <button
     pButton
     label="Create Achievement"
     class="p-button-success"
     (click)="createAchievement()"
   ></button>
-</div>
+</div> -->
+
+<!-- PrimeNG Dialog for creating a new group achievement -->
+<p-dialog
+  header="Create New Achievement"
+  [(visible)]="displayCreateDialog"
+  modal="true"
+  [closable]="true"
+  [style]="{ width: '400px', height: '450px' }"
+>
+  <div class="p-fluid">
+    <div class="p-field">
+      <label for="achievementName">Achievement Name</label>
+      <input
+        pInputText
+        id="achievementName"
+        [(ngModel)]="newAchievement.achievement_name"
+        placeholder="Enter Achievement Name"
+      />
+    </div>
+    <br />
+    <div class="p-field">
+      <label for="groupAchievement">Group Achievement</label>
+      <p-dropdown
+        [options]="groupAchievementOptions"
+        [(ngModel)]="newAchievement.group_achievement_id"
+        placeholder="Select Group Achievement"
+      >
+      </p-dropdown>
+    </div>
+  </div>
+  <p-footer>
+    <button
+      type="button"
+      pButton
+      label="Create"
+      icon="pi pi-check"
+      (click)="createAchievement()"
+    ></button>
+    <button
+      type="button"
+      pButton
+      label="Cancel"
+      icon="pi pi-times"
+      (click)="displayCreateDialog = false"
+    ></button>
+  </p-footer>
+</p-dialog>
 
 <!-- Existing Table for Achievements -->
 <div class="card">
@@ -44,7 +100,11 @@
     [rowsPerPageOptions]="[10, 25, 50]"
     [loading]="isLoading"
     [paginator]="true"
-    [globalFilterFields]="['achievement_name', 'group_achievement_name']"
+    [globalFilterFields]="[
+      'achievement_name',
+      'group_achievement_name',
+      'group_achievement_id'
+    ]"
     [tableStyle]="{ 'min-width': '75rem' }"
   >
     <ng-template pTemplate="caption">
