--- a/src/app/technical-skill/technical-skill.component.html
+++ b/src/app/technical-skill/technical-skill.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="isLoading">Loading...</div>
 <div *ngIf="error">{{ error }}</div>
 
-<h2>Group Achievements</h2>
+<h2>Technical Skills</h2>
 
 <!-- Button to open the create modal -->
 <div class="card flex justify-content-center">
   <p-button
-    label="+ Create new group achievement"
+    label="+ Create new technical skill"
     icon="pi pi-check"
     (click)="showCreateDialog()"
   ></p-button>
@@ -14,7 +14,7 @@
 
 <!-- PrimeNG Dialog for creating a new group achievement -->
 <p-dialog
-  header="Create Group Achievement"
+  header="Create Technical Skill"
   [(visible)]="displayCreateDialog"
   modal="true"
   [closable]="true"
@@ -22,22 +22,12 @@
 >
   <div class="p-fluid">
     <div class="p-field">
-      <label for="groupName">Group Achievement</label>
+      <label for="technicalSkill">Technical Skill</label>
       <input
-        id="groupName"
+        id="technicalSkill"
         type="text"
         pInputText
-        [(ngModel)]="newGroupAchievement.group_achievement_name"
-      />
-    </div>
-    <br />
-    <div class="p-field">
-      <label for="percentage">Percentage</label>
-      <input
-        id="percentage"
-        type="number"
-        pInputText
-        [(ngModel)]="newGroupAchievement.percentage"
+        [(ngModel)]="newTechnicalSkill.technical_skill"
       />
     </div>
   </div>
@@ -47,7 +37,7 @@
       pButton
       label="Create"
       icon="pi pi-check"
-      (click)="createGroupAchievement()"
+      (click)="createTecnicalSkill()"
     ></button>
     <button
       type="button"
@@ -59,64 +49,17 @@
   </p-footer>
 </p-dialog>
 
-<!-- PrimeNG Dialog for editing a group attitude skill -->
-<p-dialog
-  header="Edit Group Achievement"
-  [(visible)]="displayEditDialog"
-  modal="true"
-  [closable]="true"
-  [style]="{ width: '400px' }"
->
-  <div class="p-fluid">
-    <div class="p-field">
-      <label for="editGroupName">Group Achievement</label>
-      <input
-        id="editGroupName"
-        type="text"
-        pInputText
-        [(ngModel)]="selectedGroupAchievement.group_achievement_name"
-      />
-    </div>
-    <br />
-    <div class="p-field">
-      <label for="editPercentage">Percentage</label>
-      <input
-        id="editPercentage"
-        type="number"
-        pInputText
-        [(ngModel)]="selectedGroupAchievement.percentage"
-      />
-    </div>
-  </div>
-  <p-footer>
-    <button
-      type="button"
-      pButton
-      label="Save"
-      icon="pi pi-save"
-      (click)="updateGroupAchievement()"
-    ></button>
-    <button
-      type="button"
-      pButton
-      label="Cancel"
-      icon="pi pi-times"
-      (click)="displayEditDialog = false"
-    ></button>
-  </p-footer>
-</p-dialog>
-
 <!-- Existing Table for Achievements -->
 <div class="card">
   <p-table
     #dt2
-    [value]="groupAchievements"
+    [value]="techSkills"
     dataKey="id"
     [rows]="10"
     [rowsPerPageOptions]="[10, 25, 50]"
     [loading]="isLoading"
     [paginator]="true"
-    [globalFilterFields]="['group_achievement_name', 'percentage']"
+    [globalFilterFields]="['technical_skill']"
     [tableStyle]="{ 'min-width': '75rem' }"
   >
     <ng-template pTemplate="caption">
@@ -132,8 +75,7 @@
     <ng-template pTemplate="header">
       <tr>
         <th style="width: 25%">ID</th>
-        <th style="width: 35%">Group Name</th>
-        <th style="width: 25%">Percentage</th>
+        <th style="width: 35%">Technical Skill</th>
         <th style="width: 15%">Action</th>
       </tr>
       <tr>
@@ -148,17 +90,9 @@
         <th>
           <p-columnFilter
             type="text"
-            field="group_name"
-            placeholder="Search by group name"
-            ariaLabel="Filter Group Name"
-          />
-        </th>
-        <th>
-          <p-columnFilter
-            type="text"
-            field="percentage"
-            placeholder="Search by Percentage"
-            ariaLabel="Filter Percentage"
+            field="technical_skill"
+            placeholder="Search by technical skill"
+            ariaLabel="Filter Technical Skill"
           />
         </th>
         <th></th>
@@ -168,22 +102,19 @@
     <ng-template pTemplate="body" let-achievement>
       <tr>
         <td>{{ achievement.id }}</td>
-        <td>{{ achievement.group_achievement_name }}</td>
-        <td>{{ achievement.percentage }}</td>
+        <td>{{ achievement.technical_skill }}</td>
         <td>
           <button
             pButton
             icon="pi pi-pencil"
             label="Edit"
             class="p-button-sm p-button-info"
-            (click)="editGroupAchievement(achievement)"
           ></button>
           <button
             pButton
             icon="pi pi-trash"
             label="Delete"
             class="p-button-sm p-button-danger"
-            (click)="deleteGroupAchievement(achievement.id)"
           ></button>
         </td>
       </tr>
@@ -191,7 +122,7 @@
 
     <ng-template pTemplate="emptymessage">
       <tr>
-        <td colspan="4">No achievements found.</td>
+        <td colspan="4">No technical skill found.</td>
       </tr>
     </ng-template>
   </p-table>
