--- a/src/app/attitude-skill/attitude-skill.component.html
+++ b/src/app/attitude-skill/attitude-skill.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="isLoading">Loading...</div>
 <div *ngIf="error">{{ error }}</div>
 
-<h2>Achievements</h2>
+<h2>Attitude Skill</h2>
 
 <!-- Button to open the create modal -->
 <div class="card flex justify-content-center">
   <p-button
-    label="+ Create new achievement"
+    label="+ Create new attitude skill"
     icon="pi pi-check"
     (click)="showCreateDialog()"
   ></p-button>
@@ -14,7 +14,7 @@
 
 <!-- PrimeNG Dialog for creating a new group achievement -->
 <p-dialog
-  header="Create New Achievement"
+  header="Create New Attitude Skill"
   [(visible)]="displayCreateDialog"
   modal="true"
   [closable]="true"
@@ -22,21 +22,21 @@
 >
   <div class="p-fluid">
     <div class="p-field">
-      <label for="achievementName">Achievement Name</label>
+      <label for="attitudeSkillName">Attitude Skill</label>
       <input
         pInputText
-        id="achievementName"
-        [(ngModel)]="newAchievement.achievement_name"
-        placeholder="Enter Achievement Name"
+        id="attitudeSkillName"
+        [(ngModel)]="newAttitudeSkill.attitude_skill_name"
+        placeholder="Enter Attitude Skill"
       />
     </div>
     <br />
     <div class="p-field">
-      <label for="groupAchievement">Group Achievement</label>
+      <label for="groupAttitudeSkill">Group Attitude Skill</label>
       <p-dropdown
-        [options]="groupAchievementOptions"
-        [(ngModel)]="newAchievement.group_achievement_id"
-        placeholder="Select Group Achievement"
+        [options]="groupAttitudeSkillOptions"
+        [(ngModel)]="newAttitudeSkill.group_attitude_skill_id"
+        placeholder="Select Group Attitude Skill"
       >
       </p-dropdown>
     </div>
@@ -47,7 +47,7 @@
       pButton
       label="Create"
       icon="pi pi-check"
-      (click)="createAchievement()"
+      (click)="createAttitudeSkill()"
     ></button>
     <button
       type="button"
@@ -63,16 +63,16 @@
 <div class="card">
   <p-table
     #dt2
-    [value]="achievements"
+    [value]="attitudeSkills"
     dataKey="id"
     [rows]="10"
     [rowsPerPageOptions]="[10, 25, 50]"
     [loading]="isLoading"
     [paginator]="true"
     [globalFilterFields]="[
-      'achievement_name',
-      'group_achievement_name',
-      'group_achievement_id'
+      'attitude_skill_name',
+      'group_name',
+      'group_attitude_skill_id'
     ]"
     [tableStyle]="{ 'min-width': '75rem' }"
   >
@@ -89,8 +89,8 @@
     <ng-template pTemplate="header">
       <tr>
         <th style="width: 25%">ID</th>
-        <th style="width: 35%">Achievement Name</th>
-        <th style="width: 25%">Group Achievement Name</th>
+        <th style="width: 35%">Attitude Skill</th>
+        <th style="width: 25%">Group Attitude Skill</th>
         <th style="width: 15%">Action</th>
       </tr>
       <tr>
@@ -105,17 +105,17 @@
         <th>
           <p-columnFilter
             type="text"
-            field="achievement_name"
-            placeholder="Search by name"
-            ariaLabel="Filter Achievement Name"
+            field="attitude_skill_name"
+            placeholder="Search by attitude skill"
+            ariaLabel="Filter Attitude Skill"
           />
         </th>
         <th>
           <p-columnFilter
             type="text"
-            field="group_achievement_name"
-            placeholder="Search by Group Name"
-            ariaLabel="Filter Group Achievement Name"
+            field="group_name"
+            placeholder="Search by Group Attitude Skill"
+            ariaLabel="Filter Group Attitude skill"
           />
         </th>
         <th></th>
@@ -125,8 +125,8 @@
     <ng-template pTemplate="body" let-achievement>
       <tr>
         <td>{{ achievement.id }}</td>
-        <td>{{ achievement.achievement_name }}</td>
-        <td>{{ achievement.group_achievement_name }}</td>
+        <td>{{ achievement.attitude_skill_name }}</td>
+        <td>{{ achievement.group_name }}</td>
         <td>
           <button
             pButton
