fix little issue

--- a/src/app/features/user/user-list/user-list.component.html
+++ b/src/app/features/user/user-list/user-list.component.html
@@ -29,6 +29,7 @@
           pButton
           icon="pi pi-pencil"
           class="p-button-sm"
+          style="margin-right: 8px;"
           (click)="openEditDialog(user)"
         ></button>
         <button
