--- a/src/app/attitude-skill/attitude-skill.component.html
+++ b/src/app/attitude-skill/attitude-skill.component.html
@@ -59,6 +59,53 @@
   </p-footer>
 </p-dialog>
 
+<!-- PrimeNG Dialog for editing an achievement -->
+<p-dialog
+  header="Edit Achievement"
+  [(visible)]="displayEditDialog"
+  modal="true"
+  [closable]="true"
+  [style]="{ width: '400px', height: '450px' }"
+>
+  <div class="p-fluid">
+    <div class="p-field">
+      <label for="editAchievementName">Achievement Name</label>
+      <input
+        pInputText
+        id="editAchievementName"
+        [(ngModel)]="editAttitudeSkill.attitude_skill_name"
+        placeholder="Enter Achievement Name"
+      />
+    </div>
+    <br />
+    <div class="p-field">
+      <label for="editGroupAchievement">Group Achievement</label>
+      <p-dropdown
+        [options]="groupAttitudeSkillOptions"
+        [(ngModel)]="editAttitudeSkill.group_attitude_skill_id"
+        placeholder="Select Group Achievement"
+      >
+      </p-dropdown>
+    </div>
+  </div>
+  <p-footer>
+    <button
+      type="button"
+      pButton
+      label="Save"
+      icon="pi pi-check"
+      (click)="updateAttitudeSkill()"
+    ></button>
+    <button
+      type="button"
+      pButton
+      label="Cancel"
+      icon="pi pi-times"
+      (click)="displayEditDialog = false"
+    ></button>
+  </p-footer>
+</p-dialog>
+
 <!-- Existing Table for Achievements -->
 <div class="card">
   <p-table
@@ -133,12 +180,14 @@
             icon="pi pi-pencil"
             label="Edit"
             class="p-button-sm p-button-info"
+            (click)="showEditDialog(achievement)"
           ></button>
           <button
             pButton
             icon="pi pi-trash"
             label="Delete"
             class="p-button-sm p-button-danger"
+            (click)="deleteAttitudeSkill(achievement.id)"
           ></button>
         </td>
       </tr>
