nambahin sweetalert dan header auth

--- a/src/app/achievement/achievement.component.html
+++ b/src/app/achievement/achievement.component.html
@@ -236,6 +236,7 @@
             icon="pi pi-trash"
             label="Delete"
             class="p-button-sm p-button-danger"
+            (click)="deleteAchievement(achievement.id)"
           ></button>
         </td>
       </tr>
