--- a/src/app/division/division.component.html
+++ b/src/app/division/division.component.html
@@ -86,6 +86,57 @@
   </p-footer>
 </p-dialog>
 
+<!-- PrimeNG Dialog for showing Division Details -->
+<p-dialog
+  header="Division Details"
+  [(visible)]="displayDetailDialog"
+  modal="true"
+  [closable]="true"
+  [style]="{ width: '500px' }"
+>
+  <div class="p-fluid">
+    <div class="p-field">
+      <label style="color: maroon">Created At:</label>
+      <p style="color: red">
+        {{ selectedDivisionDetail?.created_at }}
+      </p>
+    </div>
+    <div class="p-field">
+      <label style="color: maroon">Created By:</label>
+      <p style="color: red">
+        {{ selectedDivisionDetail?.created_by?.full_name }}
+      </p>
+    </div>
+    <div class="p-field">
+      <label style="color: maroon">Updated At:</label>
+      <p style="color: red">
+        {{
+          selectedDivisionDetail?.updated_at ??
+            "-- data have not been updated yet --"
+        }}
+      </p>
+    </div>
+    <div class="p-field">
+      <label style="color: maroon">Updated By:</label>
+      <p style="color: red">
+        {{
+          selectedDivisionDetail?.updated_by?.full_name ??
+            "-- data have not been updated yet --"
+        }}
+      </p>
+    </div>
+  </div>
+  <p-footer>
+    <button
+      type="button"
+      pButton
+      label="Close"
+      icon="pi pi-times"
+      (click)="displayDetailDialog = false"
+    ></button>
+  </p-footer>
+</p-dialog>
+
 <!-- Existing Table for Group Attitude Skills -->
 <div class="card">
   <p-table
@@ -111,19 +162,19 @@
 
     <ng-template pTemplate="header">
       <tr>
-        <th style="width: 25%">ID</th>
+        <!-- <th style="width: 25%">ID</th> -->
         <th style="width: 35%">Division</th>
         <th style="width: 15%">Action</th>
       </tr>
       <tr>
-        <th>
+        <!-- <th>
           <p-columnFilter
             type="text"
             field="id"
             placeholder="Search by ID"
             ariaLabel="Filter ID"
           />
-        </th>
+        </th> -->
         <th>
           <p-columnFilter
             type="text"
@@ -138,9 +189,16 @@
 
     <ng-template pTemplate="body" let-achievement>
       <tr>
-        <td>{{ achievement.id }}</td>
+        <!-- <td>{{ achievement.id }}</td> -->
         <td>{{ achievement.division_name }}</td>
         <td>
+          <button
+            pButton
+            icon="pi pi-info-circle"
+            label="Detail"
+            class="p-button-sm p-button-secondary"
+            (click)="showDetailDialog(achievement)"
+          ></button>
           <button
             pButton
             icon="pi pi-pencil"
