--- a/src/app/features/achievement/achievement.component.html
+++ b/src/app/features/achievement/achievement.component.html
@@ -184,20 +184,20 @@
 
     <ng-template pTemplate="header">
       <tr>
-        <th style="width: 25%">ID</th>
+        <!-- <th style="width: 25%">ID</th> -->
         <th style="width: 35%">Achievement Name</th>
         <th style="width: 25%">Group Achievement Name</th>
         <th style="width: 15%">Action</th>
       </tr>
       <tr>
-        <th>
+        <!-- <th>
           <p-columnFilter
             type="text"
             field="id"
             placeholder="Search by ID"
             ariaLabel="Filter ID"
           />
-        </th>
+        </th> -->
         <th>
           <p-columnFilter
             type="text"
@@ -220,7 +220,7 @@
 
     <ng-template pTemplate="body" let-achievement>
       <tr>
-        <td>{{ achievement.id }}</td>
+        <!-- <td>{{ achievement.id }}</td> -->
         <td>{{ achievement.achievement_name }}</td>
         <td>{{ achievement.group_achievement_name }}</td>
         <td>
