--- a/src/app/features/group-achievement/group-achievement.component.html
+++ b/src/app/features/group-achievement/group-achievement.component.html
@@ -1,20 +1,20 @@
 <div *ngIf="isLoading">Loading...</div>
 <div *ngIf="error">{{ error }}</div>
 
-<h2>Group Attitude Skills</h2>
+<h2>Group Achievements</h2>
 
 <!-- Button to open the create modal -->
 <div class="card flex justify-content-center">
   <p-button
-    label="+ Create new group attitude skill"
+    label="+ Create new group achievement"
     icon="pi pi-check"
     (click)="showCreateDialog()"
   ></p-button>
 </div>
 
-<!-- PrimeNG Dialog for creating a new group attitude skill -->
+<!-- PrimeNG Dialog for creating a new group achievement -->
 <p-dialog
-  header="Create Group Attitude Skill"
+  header="Create Group Achievement"
   [(visible)]="displayCreateDialog"
   modal="true"
   [closable]="true"
@@ -22,12 +22,12 @@
 >
   <div class="p-fluid">
     <div class="p-field">
-      <label for="groupName">Group Attitude Skill</label>
+      <label for="groupName">Group Achievement</label>
       <input
         id="groupName"
         type="text"
         pInputText
-        [(ngModel)]="newGroupAttitudeSkill.group_name"
+        [(ngModel)]="newGroupAchievement.group_achievement_name"
       />
     </div>
     <br />
@@ -37,7 +37,7 @@
         id="percentage"
         type="number"
         pInputText
-        [(ngModel)]="newGroupAttitudeSkill.percentage"
+        [(ngModel)]="newGroupAchievement.percentage"
       />
     </div>
   </div>
@@ -47,7 +47,7 @@
       pButton
       label="Create"
       icon="pi pi-check"
-      (click)="createGroupAttitudeSkill()"
+      (click)="createGroupAchievement()"
     ></button>
     <button
       type="button"
@@ -61,7 +61,7 @@
 
 <!-- PrimeNG Dialog for editing a group attitude skill -->
 <p-dialog
-  header="Edit Group Attitude Skill"
+  header="Edit Group Achievement"
   [(visible)]="displayEditDialog"
   modal="true"
   [closable]="true"
@@ -69,12 +69,12 @@
 >
   <div class="p-fluid">
     <div class="p-field">
-      <label for="editGroupName">Group Attitude Skill</label>
+      <label for="editGroupName">Group Achievement</label>
       <input
         id="editGroupName"
         type="text"
         pInputText
-        [(ngModel)]="selectedGroupAttitudeSkill.group_name"
+        [(ngModel)]="selectedGroupAchievement.group_achievement_name"
       />
     </div>
     <br />
@@ -84,7 +84,7 @@
         id="editPercentage"
         type="number"
         pInputText
-        [(ngModel)]="selectedGroupAttitudeSkill.percentage"
+        [(ngModel)]="selectedGroupAchievement.percentage"
       />
     </div>
   </div>
@@ -94,7 +94,7 @@
       pButton
       label="Save"
       icon="pi pi-save"
-      (click)="updateGroupAttitudeSkill()"
+      (click)="updateGroupAchievement()"
     ></button>
     <button
       type="button"
@@ -106,17 +106,17 @@
   </p-footer>
 </p-dialog>
 
-<!-- Existing Table for Group Attitude Skills -->
+<!-- Existing Table for Achievements -->
 <div class="card">
   <p-table
     #dt2
-    [value]="groupAttitudeSkills"
+    [value]="groupAchievements"
     dataKey="id"
     [rows]="10"
     [rowsPerPageOptions]="[10, 25, 50]"
     [loading]="isLoading"
     [paginator]="true"
-    [globalFilterFields]="['group_name', 'percentage']"
+    [globalFilterFields]="['group_achievement_name', 'percentage']"
     [tableStyle]="{ 'min-width': '75rem' }"
   >
     <ng-template pTemplate="caption">
@@ -131,20 +131,20 @@
 
     <ng-template pTemplate="header">
       <tr>
-        <th style="width: 25%">ID</th>
+        <!-- <th style="width: 25%">ID</th> -->
         <th style="width: 35%">Group Name</th>
         <th style="width: 25%">Percentage</th>
         <th style="width: 15%">Action</th>
       </tr>
       <tr>
-        <th>
+        <!-- <th>
           <p-columnFilter
             type="text"
             field="id"
             placeholder="Search by ID"
             ariaLabel="Filter ID"
           />
-        </th>
+        </th> -->
         <th>
           <p-columnFilter
             type="text"
@@ -167,8 +167,8 @@
 
     <ng-template pTemplate="body" let-achievement>
       <tr>
-        <td>{{ achievement.id }}</td>
-        <td>{{ achievement.group_name }}</td>
+        <!-- <td>{{ achievement.id }}</td> -->
+        <td>{{ achievement.group_achievement_name }}</td>
         <td>{{ achievement.percentage }}</td>
         <td>
           <button
@@ -176,14 +176,14 @@
             icon="pi pi-pencil"
             label="Edit"
             class="p-button-sm p-button-info"
-            (click)="editGroupAttitudeSkill(achievement)"
+            (click)="editGroupAchievement(achievement)"
           ></button>
           <button
             pButton
             icon="pi pi-trash"
             label="Delete"
             class="p-button-sm p-button-danger"
-            (click)="deleteGroupAttitudeSkill(achievement.id)"
+            (click)="deleteGroupAchievement(achievement.id)"
           ></button>
         </td>
       </tr>
