--- a/src/app/features/group-attitude-skill/group-attitude-skill.component.html
+++ b/src/app/features/group-attitude-skill/group-attitude-skill.component.html
@@ -1,20 +1,20 @@
 <div *ngIf="isLoading">Loading...</div>
 <div *ngIf="error">{{ error }}</div>
 
-<h2>Group Achievements</h2>
+<h2>Group Attitude Skills</h2>
 
 <!-- Button to open the create modal -->
 <div class="card flex justify-content-center">
   <p-button
-    label="+ Create new group achievement"
+    label="+ Create new group attitude skill"
     icon="pi pi-check"
     (click)="showCreateDialog()"
   ></p-button>
 </div>
 
-<!-- PrimeNG Dialog for creating a new group achievement -->
+<!-- PrimeNG Dialog for creating a new group attitude skill -->
 <p-dialog
-  header="Create Group Achievement"
+  header="Create Group Attitude Skill"
   [(visible)]="displayCreateDialog"
   modal="true"
   [closable]="true"
@@ -22,12 +22,12 @@
 >
   <div class="p-fluid">
     <div class="p-field">
-      <label for="groupName">Group Achievement</label>
+      <label for="groupName">Group Attitude Skill</label>
       <input
         id="groupName"
         type="text"
         pInputText
-        [(ngModel)]="newGroupAchievement.group_achievement_name"
+        [(ngModel)]="newGroupAttitudeSkill.group_name"
       />
     </div>
     <br />
@@ -37,7 +37,7 @@
         id="percentage"
         type="number"
         pInputText
-        [(ngModel)]="newGroupAchievement.percentage"
+        [(ngModel)]="newGroupAttitudeSkill.percentage"
       />
     </div>
   </div>
@@ -47,7 +47,7 @@
       pButton
       label="Create"
       icon="pi pi-check"
-      (click)="createGroupAchievement()"
+      (click)="createGroupAttitudeSkill()"
     ></button>
     <button
       type="button"
@@ -61,7 +61,7 @@
 
 <!-- PrimeNG Dialog for editing a group attitude skill -->
 <p-dialog
-  header="Edit Group Achievement"
+  header="Edit Group Attitude Skill"
   [(visible)]="displayEditDialog"
   modal="true"
   [closable]="true"
@@ -69,12 +69,12 @@
 >
   <div class="p-fluid">
     <div class="p-field">
-      <label for="editGroupName">Group Achievement</label>
+      <label for="editGroupName">Group Attitude Skill</label>
       <input
         id="editGroupName"
         type="text"
         pInputText
-        [(ngModel)]="selectedGroupAchievement.group_achievement_name"
+        [(ngModel)]="selectedGroupAttitudeSkill.group_name"
       />
     </div>
     <br />
@@ -84,7 +84,7 @@
         id="editPercentage"
         type="number"
         pInputText
-        [(ngModel)]="selectedGroupAchievement.percentage"
+        [(ngModel)]="selectedGroupAttitudeSkill.percentage"
       />
     </div>
   </div>
@@ -94,7 +94,7 @@
       pButton
       label="Save"
       icon="pi pi-save"
-      (click)="updateGroupAchievement()"
+      (click)="updateGroupAttitudeSkill()"
     ></button>
     <button
       type="button"
@@ -106,17 +106,68 @@
   </p-footer>
 </p-dialog>
 
-<!-- Existing Table for Achievements -->
+<!-- PrimeNG Dialog for showing Division Details -->
+<p-dialog
+  header="Division Details"
+  [(visible)]="displayDetailDialog"
+  modal="true"
+  [closable]="true"
+  [style]="{ width: '500px' }"
+>
+  <div class="p-fluid">
+    <div class="p-field">
+      <label style="color: maroon">Created At:</label>
+      <p style="color: red">
+        {{ selectedDivisionDetail?.created_at }}
+      </p>
+    </div>
+    <div class="p-field">
+      <label style="color: maroon">Created By:</label>
+      <p style="color: red">
+        {{ selectedDivisionDetail?.created_by?.full_name }}
+      </p>
+    </div>
+    <div class="p-field">
+      <label style="color: maroon">Updated At:</label>
+      <p style="color: red">
+        {{
+          selectedDivisionDetail?.updated_at ??
+            "-- data have not been updated yet --"
+        }}
+      </p>
+    </div>
+    <div class="p-field">
+      <label style="color: maroon">Updated By:</label>
+      <p style="color: red">
+        {{
+          selectedDivisionDetail?.updated_by?.full_name ??
+            "-- data have not been updated yet --"
+        }}
+      </p>
+    </div>
+  </div>
+  <p-footer>
+    <button
+      type="button"
+      pButton
+      label="Close"
+      icon="pi pi-times"
+      (click)="displayDetailDialog = false"
+    ></button>
+  </p-footer>
+</p-dialog>
+
+<!-- Existing Table for Group Attitude Skills -->
 <div class="card">
   <p-table
     #dt2
-    [value]="groupAchievements"
+    [value]="groupAttitudeSkills"
     dataKey="id"
     [rows]="10"
     [rowsPerPageOptions]="[10, 25, 50]"
     [loading]="isLoading"
     [paginator]="true"
-    [globalFilterFields]="['group_achievement_name', 'percentage']"
+    [globalFilterFields]="['group_name', 'percentage']"
     [tableStyle]="{ 'min-width': '75rem' }"
   >
     <ng-template pTemplate="caption">
@@ -131,20 +182,20 @@
 
     <ng-template pTemplate="header">
       <tr>
-        <th style="width: 25%">ID</th>
+        <!-- <th style="width: 25%">ID</th> -->
         <th style="width: 35%">Group Name</th>
         <th style="width: 25%">Percentage</th>
         <th style="width: 15%">Action</th>
       </tr>
       <tr>
-        <th>
+        <!-- <th>
           <p-columnFilter
             type="text"
             field="id"
             placeholder="Search by ID"
             ariaLabel="Filter ID"
           />
-        </th>
+        </th> -->
         <th>
           <p-columnFilter
             type="text"
@@ -167,23 +218,30 @@
 
     <ng-template pTemplate="body" let-achievement>
       <tr>
-        <td>{{ achievement.id }}</td>
-        <td>{{ achievement.group_achievement_name }}</td>
+        <!-- <td>{{ achievement.id }}</td> -->
+        <td>{{ achievement.group_name }}</td>
         <td>{{ achievement.percentage }}</td>
         <td>
+          <button
+            pButton
+            icon="pi pi-info-circle"
+            label="Detail"
+            class="p-button-sm p-button-secondary"
+            (click)="showDetailDialog(achievement)"
+          ></button>
           <button
             pButton
             icon="pi pi-pencil"
             label="Edit"
             class="p-button-sm p-button-info"
-            (click)="editGroupAchievement(achievement)"
+            (click)="editGroupAttitudeSkill(achievement)"
           ></button>
           <button
             pButton
             icon="pi pi-trash"
             label="Delete"
             class="p-button-sm p-button-danger"
-            (click)="deleteGroupAchievement(achievement.id)"
+            (click)="deleteGroupAttitudeSkill(achievement.id)"
           ></button>
         </td>
       </tr>
