--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,7 @@
       label="logout"
       class="p-button-danger"
       style="font-weight: bold"
+      (click)="logout()"
     ></button>
   </div>
 </p-menubar>
