--- a/src/app/group-achievement/group-achievement.component.html
+++ b/src/app/group-achievement/group-achievement.component.html
@@ -159,6 +159,7 @@
             field="percentage"
             placeholder="Search by Percentage"
             ariaLabel="Filter Percentage"
+            display="row"
           />
         </th>
         <th></th>
