emp achive CRUD done

--- a/src/app/features/attitude-skill/attitude-skill.component.html
+++ b/src/app/features/attitude-skill/attitude-skill.component.html
@@ -69,7 +69,7 @@
 >
   <div class="p-fluid">
     <div class="p-field">
-      <label for="editAchievementName">Achievement Name</label>
+      <label for="editAchievementName">Attitude Skill</label>
       <input
         pInputText
         id="editAchievementName"
@@ -79,7 +79,7 @@
     </div>
     <br />
     <div class="p-field">
-      <label for="editGroupAchievement">Group Achievement</label>
+      <label for="editGroupAchievement">Group Attitude Skill</label>
       <p-dropdown
         [options]="groupAttitudeSkillOptions"
         [(ngModel)]="editAttitudeSkill.group_attitude_skill_id"
