--- a/src/app/features/group-achievement/group-achievement.component.html
+++ b/src/app/features/group-achievement/group-achievement.component.html
@@ -159,7 +159,7 @@
       <tr>
         <!-- <td>{{ achievement.id }}</td> -->
         <td>{{ achievement.group_achievement_name }}</td>
-        <td>{{ achievement.percentage }}</td>
+        <td>{{ achievement.percentage }}%</td>
         <td>
           <button
             pButton
