--- a/src/app/features/group-attitude-skill/group-attitude-skill.component.html
+++ b/src/app/features/group-attitude-skill/group-attitude-skill.component.html
@@ -210,7 +210,7 @@
       <tr>
         <!-- <td>{{ achievement.id }}</td> -->
         <td>{{ achievement.group_name }}</td>
-        <td>{{ achievement.percentage }}</td>
+        <td>{{ achievement.percentage }}%</td>
         <td>
           <button
             pButton
