add navbar and fix small issue

--- a/src/app/features/group-attitude-skill/group-attitude-skill.component.html
+++ b/src/app/features/group-attitude-skill/group-attitude-skill.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="isLoading">Loading...</div>
 <div *ngIf="error">{{ error }}</div>
 
+<app-nav-bar></app-nav-bar>
+
 <h2>Group Attitude Skills</h2>
 
 <!-- Button to open the create modal -->
