--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -1,3 +1,5 @@
+<app-nav-bar></app-nav-bar>
+
 <h1>Insert Emp Attitude Skill</h1>
 <label for="assessmentYear">Assessment Year:</label>
 <input type="number" id="assessmentYear" [(ngModel)]="assessmentYear" />
@@ -18,12 +20,25 @@
         <td>{{ i + 1 }}</td>
         <td>{{ skill.attitude_skill_name }}</td>
         <td>
-          <p-inputNumber
+          <!-- <p-inputNumber
             [(ngModel)]="skill.score"
             [showButtons]="true"
             (onInput)="logSkillId(skill.id, skill.score)"
             [disabled]="isSkillDisabled(skill.id)"
-          ></p-inputNumber>
+            min="0"
+            max="100"
+          ></p-inputNumber> -->
+
+          <p-dropdown
+            [options]="scoreOptions"
+            [(ngModel)]="skill.score"
+            (onChange)="logSkillId(skill.id, skill.score)"
+            [disabled]="isSkillDisabled(skill.id)"
+            placeholder="Pilih nilai"
+            [appendTo]="'body'"
+          >
+            > ></p-dropdown
+          >
         </td>
         <td>
           <!-- Dynamically display status with color -->
@@ -36,14 +51,13 @@
   </p-table>
 
   <!-- Validation Message -->
-  <div *ngIf="getTotalScore(group) > 100" style="color: red; font-weight: bold">
+  <!-- <div *ngIf="getTotalScore(group) > 100" style="color: red; font-weight: bold">
     Total nilai tidak boleh lebih dari 100!
-  </div>
+  </div> -->
 </div>
 
 <p-button
   label="Simpan"
   icon="pi pi-save"
   (click)="saveSkills()"
-  [disabled]="getTotalScore(groupData[0]) > 100"
 ></p-button>
