--- a/src/app/features/achievement/achievement.component.html
+++ b/src/app/features/achievement/achievement.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="isLoading">Loading...</div>
 <div *ngIf="error">{{ error }}</div>
 
+<app-nav-bar></app-nav-bar>
+
 <h2>Achievements</h2>
 
 <!-- Button to open the create modal -->
