--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -1,6 +1,11 @@
 <h1>Insert Emp Attitude Skill</h1>
 <label for="assessmentYear">Assessment Year:</label>
-<input type="number" id="assessmentYear" [(ngModel)]="assessmentYear" />
+<input
+  type="number"
+  id="assessmentYear"
+  [(ngModel)]="assessmentYear"
+  disabled="true"
+/>
 
 <div *ngFor="let group of groupData">
   <h3>{{ group.group_name }}</h3>
@@ -18,12 +23,16 @@
         <td>{{ i + 1 }}</td>
         <td>{{ skill.attitude_skill_name }}</td>
         <td>
-          <p-inputNumber
+          <p-dropdown
+            [options]="scoreOptions"
             [(ngModel)]="skill.score"
-            [showButtons]="true"
-            (onInput)="logSkillId(skill.id, skill.score)"
+            (onChange)="logSkillId(skill.id, skill.score)"
             [disabled]="isSkillDisabled(skill.id)"
-          ></p-inputNumber>
+            placeholder="Pilih nilai"
+            [appendTo]="'body'"
+          >
+            > ></p-dropdown
+          >
         </td>
         <td>
           <!-- Dynamically display status with color -->
@@ -34,16 +43,6 @@
       </tr>
     </ng-template>
   </p-table>
-
-  <!-- Validation Message -->
-  <div *ngIf="getTotalScore(group) > 100" style="color: red; font-weight: bold">
-    Total nilai tidak boleh lebih dari 100!
-  </div>
 </div>
 
-<p-button
-  label="Simpan"
-  icon="pi pi-save"
-  (click)="saveSkills()"
-  [disabled]="getTotalScore(groupData[0]) > 100"
-></p-button>
+<p-button label="Simpan" icon="pi pi-save" (click)="saveSkills()"></p-button>
