--- a/src/app/emp-dev-plan/emp-dev-plan.component.html
+++ b/src/app/emp-dev-plan/emp-dev-plan.component.html
@@ -1,6 +1,11 @@
 <h1>Insert emp dev plan</h1>
 <label for="assessmentYear">Assessment Year:</label>
-<input type="number" id="assessmentYear" [(ngModel)]="assessmentYear" />
+<input
+  type="number"
+  id="assessmentYear"
+  [(ngModel)]="assessmentYear"
+  disabled="true"
+/>
 <div *ngFor="let group of groupData">
   <h3>{{ group.plan }}</h3>
 
@@ -20,13 +25,13 @@
           <textarea
             pInputTextarea
             [(ngModel)]="row.plan_detail"
-            (input)="logPlanId(row.dev_plan_id, row.plan_detail, row)"
+            (blur)="logPlanId(row.dev_plan_id, row.plan_detail, row)"
             [style.width]="'100%'"
             rows="3"
           >
           </textarea>
         </td>
-        <!-- <td>
+        <td>
           <p-button
             label="Hapus"
             icon="pi pi-trash"
@@ -34,14 +39,34 @@
             (click)="deleteRow(group, i)"
           >
           </p-button>
-        </td> -->
+        </td>
       </tr>
     </ng-template>
   </p-table>
 
   <!-- Button to Add Row -->
-  <!-- <p-button label="Tambah Baris" icon="pi pi-plus" (click)="addRow(group)">
-  </p-button> -->
+  <p-button label="Tambah Baris" icon="pi pi-plus" (click)="addRow(group)">
+  </p-button>
 </div>
 <br />
 <p-button label="Simpan" icon="pi pi-save" (click)="savePlans()"></p-button>
+
+<!-- tabel tampilkan data yng diinput user -->
+
+<h2>Daftar Semua Keterangan</h2>
+<p-table [value]="savedPlans" [paginator]="true" [rows]="5">
+  <ng-template pTemplate="header">
+    <tr>
+      <th>No.</th>
+      <th>Nama Group</th>
+      <th>Keterangan</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-plan let-i="rowIndex">
+    <tr>
+      <td>{{ i + 1 }}</td>
+      <td>{{ plan.dev_plan_id }}</td>
+      <td>{{ plan.plan_detail }}</td>
+    </tr>
+  </ng-template>
+</p-table>
